--- a/tests/partmap_test.in
+++ b/tests/partmap_test.in
@@ -66,6 +66,12 @@ case "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" in
 	# QEMU firmware has bugs which prevent it from accessing hard disk.
 	exit 0
 	;;
+    sparc64-ieee1275)
+	disk=ieee1275//pci@1fe\,0/pci-ata@5/ide0@500/disk@0
+	qemudisk=hda
+	# QEMU firmware has bugs which prevent it from accessing hard disk.
+	exit 0
+	;;
     i386-ieee1275)
 	disk=ieee1275/d
 	qemudisk=hdb
