Support coreboot framebuffer.
	* grub-core/video/i386/coreboot/cbfb.c: New file.

--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -1797,6 +1797,12 @@ module = {
 };
 
 module = {
+  name = coreboot_fb;
+  common = video/i386/coreboot/cbfb.c;
+  enable = i386_coreboot;
+};
+
+module = {
   name = sdl;
   emu = video/emu/sdl.c;
   enable = emu;
