--- a/tests/grub_cmd_date.in
+++ b/tests/grub_cmd_date.in
@@ -4,7 +4,8 @@ set -e
 . "@builddir@/grub-core/modinfo.sh"
 
 # OpenBIOS on sparc64 doesn't implement RTC
-if [ "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" = sparc64-ieee1275 ]; then
+# mipsel-arc QEMU emulated RTC doesn't play well with firmware
+if [ "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" = sparc64-ieee1275 ] || [ "${grub_modinfo_target_cpu}-${grub_modinfo_platform}" = mipsel-arc ]; then
     exit 0
 fi
 
